--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "d64": "^1.0.0",
+    "typescript": "^4.0.5",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
